--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -18,6 +18,7 @@ body {
 .container {
   background-color: #ffffff;
   border-radius: 5px;
+  min-height: 70vh;
 }
 body {
   margin: 0;
@@ -30,35 +31,14 @@ h1 {
   font-size: 45px;
   line-height: 1.1;
 }
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
+.custom_button {
   color: #ffffff;
   background-color: #646cff !important;
-  cursor: pointer;
-  transition: border-color 0.25s;
 }
-button:hover {
+.custom_button:hover {
   background-color: #6c71cf;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
 .CircularProgressbar-path {
   stroke: #747bff !important;
 }
